hphp/hack/test/typecheck/reserved_name18.php.exp
File "reserved_name18.php", line 5, characters 7-11:
Mixed cannot be used as it is reserved. (Naming[2068])
