hphp/hack/test/typecheck/reserved_name18.php
<?hh

namespace Foo;

class Mixed {}
